0. Сортировка [#10096]. Пересобрал тесты